# DashBoard-and-Retrain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  .flake8  alembic.ini  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_empty_baseline.py  0002_create_daily_metrics.py  0003_create_threshold.py  0004_create_task.py  0005_create_color_master.py  0006_create_edge_pc.py  0007_create_retraining.py
backend/src/: __init__.py  config.py  database.py  logging_config.py  main.py  scheduler.py
backend/src/api/: __init__.py  aggregation_endpoint.py  color_master_endpoint.py  dashboard_endpoint.py  edge_pc_endpoint.py  retraining_endpoint.py  security.py  task_endpoint.py  threshold_endpoint.py
backend/src/jobs/: __init__.py  aggregation_job.py  breach_eval_job.py  color_lifecycle_job.py
backend/src/models/: __init__.py  color_master.py  daily_metrics.py  deployed_model.py  edge_pc.py  retraining_job.py  task.py  threshold.py
backend/src/repositories/: __init__.py  color_master_repository.py  daily_metrics_repository.py  edge_pc_repository.py  inspection_detail_repository.py  retraining_repository.py  task_repository.py  threshold_repository.py
backend/src/schemas/: __init__.py  aggregation.py  color_master.py  dashboard.py  edge_pc.py  retraining.py  task.py  threshold.py
backend/src/services/: __init__.py  aggregation_service.py  breach_evaluation_service.py  color_import_service.py  color_lifecycle_service.py  (+6 more)
backend/tests/: conftest.py
(+262 files in other folders)
